--- a/host/src/App.css
+++ b/host/src/App.css
@@ -1,5 +1,28 @@
-.App {
-  text-align: center;
+.host_main {
+  background: #494d55;
+  height: 100vh;
+  overflow: auto;
+  display: block;
+}
+
+.host_header {
+  min-height: 1vh;
+  display: flex;
+  flex-direction: row;
+   
+  background: #0cacd8;
+}
+
+.host_footer {
+  position: absolute;
+  bottom: 0;
+
+  min-height: 1vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  background: #0cacd8;  
 }
 
 .App-logo {
@@ -11,17 +34,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
